--- a/07-practice-project/01-starter/index.html
+++ b/07-practice-project/01-starter/index.html
@@ -40,6 +40,84 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a href="about.html" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="services.html" class="nav-link">Services</a>
+            </li>
+            <li class="nav-item">
+              <a href="contact.html" class="nav-link">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- carousel  -->
+    <div
+      id="carouselExampleIndicators"
+      class="carousel slide"
+      data-ride="carousel"
+    >
+      <ol class="carousel-indicators">
+        <li
+          data-target="#carouselExampleIndicators"
+          data-slide-to="0"
+          class="active"
+        ></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <!-- slide one -->
+        <div
+          class="carousel-item active"
+          style="background-image: url('https://placehold.it/1900x1080');"
+        >
+          <div class="carousel-caption d-non d-md-block">
+            <h3>slide1</h3>
+            <p>text</p>
+          </div>
+        </div>
+        <!-- slide two -->
+        <div
+          class="carousel-item"
+          style="background-image: url('https://placehold.it/1900x1080');"
+        >
+          <div class="carousel-caption d-non d-md-block">
+            <h3>slide2</h3>
+            <p>text</p>
+          </div>
+        </div>
+        <!-- slide three -->
+        <div
+          class="carousel-item"
+          style="background-image: url('https://placehold.it/1900x1080');"
+        >
+          <div class="carousel-caption d-non d-md-block">
+            <h3>slide3</h3>
+            <p>text</p>
+          </div>
+        </div>
+        <a
+          href="#carouselExampleIndicators"
+          data-slide="prev"
+          class="carousel-control-prev"
+        >
+          <span class="carousel-control-prev-icon"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a
+          href="#carouselExampleIndicators"
+          data-slide="next"
+          class="carousel-control-next"
+        >
+          <span class="carousel-control-next-icon"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
     </div>
 
