--- a/07-practice-project/01-starter/index.html
+++ b/07-practice-project/01-starter/index.html
@@ -57,7 +57,7 @@
     </div>
 
     <!-- carousel  -->
-    <div
+    <header
       id="carouselExampleIndicators"
       class="carousel slide"
       data-ride="carousel"
@@ -119,7 +119,196 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
+    </header>
+    <div class="mt-3"></div>
+    <div class="container">
+      <div class="row">
+        <!-- indiv card  -->
+        <div class="col-lg-4 mb-4">
+          <div class="card h-100">
+            <h4 class="card-header">
+              Card Title
+            </h4>
+            <div class="card-body">
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptates voluptatem minus facere inventore illum, aspernatur
+                eveniet debitis, mollitia eos dolore, quas nostrum nam ad vero
+                quaerat nobis. Sit, numquam ipsa?
+              </p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-primary">Learn More</a>
+            </div>
+          </div>
+        </div>
+        <!-- indiv card  -->
+        <div class="col-lg-4 mb-4">
+          <div class="card h-100">
+            <h4 class="card-header">
+              Card Title
+            </h4>
+            <div class="card-body">
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptates voluptatem minus facere inventore illum, aspernatur
+                eveniet debitis, mollitia eos dolore, quas nostrum nam ad vero
+                quaerat nobis. Sit, numquam ipsa?
+              </p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-primary">Learn More</a>
+            </div>
+          </div>
+        </div>
+        <!-- indiv card  -->
+        <div class="col-lg-4 mb-4">
+          <div class="card h-100">
+            <h4 class="card-header">
+              Card Title
+            </h4>
+            <div class="card-body">
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptates voluptatem minus facere inventore illum, aspernatur
+                eveniet debitis, mollitia eos dolore, quas nostrum nam ad vero
+                quaerat nobis. Sit, numquam ipsa?
+              </p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-primary">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- portfolio  -->
+      <h2>Portfolio</h2>
+      <div class="row">
+        <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"
+              ><img
+                class="card-img-top"
+                src="https://placehold.it/700x400"
+                alt=""
+            /></a>
+            <div class="card-body">
+              <h4 class="card-title"><a href="#">Project 1</a></h4>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"
+              ><img
+                class="card-img-top"
+                src="https://placehold.it/700x400"
+                alt=""
+            /></a>
+            <div class="card-body">
+              <h4 class="card-title"><a href="#">Project 2</a></h4>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"
+              ><img
+                class="card-img-top"
+                src="https://placehold.it/700x400"
+                alt=""
+            /></a>
+            <div class="card-body">
+              <h4 class="card-title"><a href="#">Project 3</a></h4>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"
+              ><img
+                class="card-img-top"
+                src="https://placehold.it/700x400"
+                alt=""
+            /></a>
+            <div class="card-body">
+              <h4 class="card-title"><a href="#">Project 4</a></h4>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"
+              ><img
+                class="card-img-top"
+                src="https://placehold.it/700x400"
+                alt=""
+            /></a>
+            <div class="card-body">
+              <h4 class="card-title"><a href="#">Project 5</a></h4>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"
+              ><img
+                class="card-img-top"
+                src="https://placehold.it/700x400"
+                alt=""
+            /></a>
+            <div class="card-body">
+              <h4 class="card-title"><a href="#">Project 6</a></h4>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- spacing  -->
+      <div class="mt-3"></div>
+      <!-- featured item section  -->
+      <div class="row">
+        <div class="col-lg-6">
+          <h2>Featured Item 1</h2>
+          <ul>
+            <li>Sub feature 1</li>
+            <li>Sub feature 2</li>
+            <li>Sub feature 3</li>
+            <li>Sub feature 4</li>
+            <li>Sub feature 5</li>
+          </ul>
+        </div>
+        <div class="col-lg-6">
+          <img
+            class="img-fluid rounded"
+            src="https://placehold.it/700x400"
+            alt=""
+          />
+        </div>
+      </div>
+      <!-- spacing  -->
+      <div class="mt-3"></div>
+      <!-- CTA  -->
+      <div class="row mb-4">
+        <div class="col-md-8">
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error,
+            asperiores. Obcaecati quisquam, ad consequuntur ipsam deserunt
+            minima cupiditate ut sit asperiores harum consectetur id cumque
+            aliquid recusandae. Nisi, deleniti repellendus.
+          </p>
+        </div>
+        <div class="col-md-4">
+          <a href="#" class="btn btn-primary btn-block">CTA (Subscribe)</a>
+        </div>
+      </div>
     </div>
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">
+          Copyright &copy; 2020 IreneBootstrap4
+        </p>
+      </div>
+    </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script
