abt and services pages added

--- a/07-practice-project/01-starter/about.html
+++ b/07-practice-project/01-starter/about.html
@@ -1,34 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
-<head>
+    <title>Bootstrap 4 | About</title>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <!-- Bootstrap core CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
 
-  <title>Modern Business - Start Bootstrap Template</title>
+    <!-- Custom styles for this template -->
+    <link href="css/modern-business.css" rel="stylesheet" />
+  </head>
 
-  <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <body>
+    <!-- navigation  -->
+    <div
+      class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top"
+    >
+      <div class="container">
+        <a href="index.html" class="navbar-brand">Logo</a>
+        <button
+          class="navbar-toggler navbar-toggler-right"
+          data-toggle="collapse"
+          data-target="#navbarResponsive"
+          aria-controls="navbarResponsive"
+          aria-expanded="false"
+          aria-label="Toggle navigation."
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a href="about.html" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="services.html" class="nav-link">Services</a>
+            </li>
+            <li class="nav-item">
+              <a href="contact.html" class="nav-link">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
-  <!-- Custom styles for this template -->
-  <link href="css/modern-business.css" rel="stylesheet">
+    <div class="container">
+      <h1 class="mt-4 mb-3">
+        About
+      </h1>
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.html"></a></li>
+        <lo class="breadcrumb-item active">About</lo>
+      </ol>
+      <!-- new section  -->
+      <div class="row">
+        <div class="col-lg-6">
+          <img
+            src="https://placehold.it/750x450"
+            alt=""
+            class="img-fluid rounded mb-4"
+          />
+        </div>
+        <div class="col-lg-6">
+          <h2>Bootstrap 4</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
+            repellendus consequuntur optio non ratione. Placeat, praesentium
+            assumenda. Excepturi, blanditiis, voluptatibus iure harum tempore
+            nihil odio praesentium esse provident dolorum sed! Lorem ipsum,
+            dolor sit amet consectetur adipisicing elit. Laborum commodi amet
+            ipsam? Sint commodi, alias neque perspiciatis vel inventore
+            distinctio culpa autem. Aspernatur quasi ad numquam, sit adipisci
+            qui voluptatibus.
+          </p>
+        </div>
+      </div>
+      <!-- new section  -->
+      <h2>Our Team</h2>
 
-</head>
+      <div class="row">
+        <div class="col-lg-4 mb-4">
+          <div class="card h-100 text-center">
+            <img
+              src="https://placehold.it/750x450"
+              alt=""
+              class="card-img-top"
+            />
+            <div class="card-body">
+              <h4 class="card-title">Team Member</h4>
+              <h8 class="card-subtitle mb-2 text-muted">Position</h8>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo
+                tempore iusto cum temporibus veniam at suscipit iure nisi
+                placeat, ullam libero accusamus est corrupti? Quidem molestias
+                consequuntur itaque numquam tenetur!
+              </p>
+              <div class="card-footer"><a href="#">hello@email.com</a></div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 mb-4">
+          <div class="card h-100 text-center">
+            <img
+              src="https://placehold.it/750x450"
+              alt=""
+              class="card-img-top"
+            />
+            <div class="card-body">
+              <h4 class="card-title">Team Member</h4>
+              <h8 class="card-subtitle mb-2 text-muted">Position</h8>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo
+                tempore iusto cum temporibus veniam at suscipit iure nisi
+                placeat, ullam libero accusamus est corrupti? Quidem molestias
+                consequuntur itaque numquam tenetur!
+              </p>
+              <div class="card-footer"><a href="#">hello@email.com</a></div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 mb-4">
+          <div class="card h-100 text-center">
+            <img
+              src="https://placehold.it/750x450"
+              alt=""
+              class="card-img-top"
+            />
+            <div class="card-body">
+              <h4 class="card-title">Team Member</h4>
+              <h8 class="card-subtitle mb-2 text-muted">Position</h8>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo
+                tempore iusto cum temporibus veniam at suscipit iure nisi
+                placeat, ullam libero accusamus est corrupti? Quidem molestias
+                consequuntur itaque numquam tenetur!
+              </p>
+              <div class="card-footer"><a href="#">hello@email.com</a></div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-<body>
+      <!-- new section  -->
+      <h2>Our Customers</h2>
+      <div class="row">
+        <div class="col-lg-2 col-sm-4 mb-4">
+          <img class="img-fluid" src="http://placehold.it/500x300" alt="" />
+        </div>
+        <div class="col-lg-2 col-sm-4 mb-4">
+          <img class="img-fluid" src="http://placehold.it/500x300" alt="" />
+        </div>
+        <div class="col-lg-2 col-sm-4 mb-4">
+          <img class="img-fluid" src="http://placehold.it/500x300" alt="" />
+        </div>
+        <div class="col-lg-2 col-sm-4 mb-4">
+          <img class="img-fluid" src="http://placehold.it/500x300" alt="" />
+        </div>
+        <div class="col-lg-2 col-sm-4 mb-4">
+          <img class="img-fluid" src="http://placehold.it/500x300" alt="" />
+        </div>
+        <div class="col-lg-2 col-sm-4 mb-4">
+          <img class="img-fluid" src="http://placehold.it/500x300" alt="" />
+        </div>
+      </div>
+    </div>
 
-   
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">
+          Copyright &copy; 2020 IreneBootstrap4
+        </p>
+      </div>
+    </footer>
+    <!-- Bootstrap core JavaScript -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
 
-  <!-- Bootstrap core JavaScript --> 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-</body>
-
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
