--- a/07-practice-project/01-starter/index.html
+++ b/07-practice-project/01-starter/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Modern Business - Start Bootstrap Template</title>
+    <title>Bootstrap 4 | Home</title>
 
     <!-- Bootstrap core CSS -->
     <link
